@@ -122,6 +122,7 @@ Qingyao Sun
 Rafal Kapuscik
 Raynard Qiao
 Richard Myers
+Risto Pejašinović
 Robert Balas
 Rupert Swarbrick
 Ryszard Rozak
